# CAR-Entry-Screen

./: CMakeLists.txt  README.md  logo.rc  main.cpp
Resource/: swcdbmsclientresources.qrc
Resource/styles/qt_material_modified/themes/: light.xml
src/framework/defination/: ImageDefination.h  TypeDef.h
src/framework/service/: CachedUserData.cpp  CachedUserData.h  HttpClient.h  UserMetaInfo.cpp  UserMetaInfo.h
src/styles/: QtAdvancedStylesheet.cpp
src/ui/: editorusersettings.cpp  editorusersettings.h  editorusersettings.ui  loginwindow.cpp  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp
